--- a/ciphers/src/App.css
+++ b/ciphers/src/App.css
@@ -21,15 +21,17 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .center{
   text-align: center;
+}
+
+.playfair-square{
+  width: 300px;
+}
+
+#playfair-table{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
