--- a/ciphers/src/App.css
+++ b/ciphers/src/App.css
@@ -1,40 +1,47 @@
-
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: white;
-  min-height: 100vh;
+main {
+  margin-top: 1em;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.content{
+  flex: 2 1 60%;
 }
 
-.center{
+.side{
+  flex: 1 1 20%;
+}
+
+
+h2, h3{
   text-align: center;
 }
-
+/*
 .tab-content {
   height: inherit;
 }
-
+*/
+/*
 .output{
   height: 10rem;
 }
+*/
 
 .playfair-square{
-  width: 300px;
+  min-width: 300px;
+  border: #dee2e6 solid 2px;
+  border-radius: 5%;
+  border-collapse: unset;
+  padding: 0.25em;
+}
+
+.playfair-square td{
+  text-align: center;
+  max-width: 20px;
+  padding: .5em;
+  background-color: #dee2e6;
+  border-radius: 10%;
+  border: white solid 2px;
 }
 
 #playfair-table{
@@ -42,15 +49,7 @@
   flex-direction: column;
   align-content: center;
   align-items: center;
-}
-
-footer{
-  position: fixed;
-  left:0;
-  bottom:0;
-  right:0;
-  text-align: center;
-  color: black;
+  margin: 1em 0;
 }
 
 html{
@@ -59,7 +58,7 @@ html{
 
 body{
   min-height: 100%;
-  background-color: #EFEFEF;
+  background-color: white;
 }
 
 div{
@@ -87,12 +86,8 @@ h5 {
   border-bottom-style: solid;
 }
 
-nav, footer {
-   background-color: #A9A9A9;
-}
-
-.footer-link {
-  color: black;
+nav {
+   background-color: #EFEFEF;
 }
 
 .nav-item {
