--- a/ciphers/src/index.css
+++ b/ciphers/src/index.css
@@ -1,9 +1,19 @@
+html, body {
+  min-height: 100%;
+}
+
+html{
+  height: 100%;
+}
+
+body {
+  height: auto;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
